force-app/main/default/objects/EFPIO__LoggingProviderSettings__c/EFPIO__LoggingProviderSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Provides ability to specify the logging provider that will be used within the framework.</description>
    <label>EFPIO - Logging Provider Settings</label>
</CustomObject>