force-app/main/default/objects/EFPIO__LoggingProviderSettings__c/fields/EFPIO__LoggingLevels__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__LoggingLevels__c</fullName>
    <description>The comma delimited list of logging levels. Only System.LoggingLevel enum values are valid for use. This is a cumulative list, so if you only specify ERROR, only logs with ERROR will be stored, however, if you specify INFO, then INFO, WARN, and ERROR logs will be stored. If you specify &quot;WARN, FINE&quot; then only the highest level will be taken into account - FINE in this case, which will consist of FINE, DEBUG, INFO, WARN, and ERROR. Valid values are NONE,ERROR,WARN,INFO,DEBUG,FINE,FINER,FINEST</description>
    <label>Logging Levels to Capture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>