force-app/main/default/objects/EFPIO__LoggingProviderSettings__c/fields/EFPIO__LoggingMaxRetryAttempts__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__LoggingMaxRetryAttempts__c</fullName>
    <description>The maximum amount of times to attempt to retry a DML interaction before erroring.</description>
    <label>Logging Max Retry Attempts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>