force-app/main/default/objects/EFPIO__LoggingProviderSettings__c/fields/EFPIO__LoggingProvider__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__LoggingProvider__c</fullName>
    <description>The fully qualified name of the logging provider implementing the EFPIO.ILoggingProvider_v1 interface and extending the LoggingBaseProvider_v1 base class.</description>
    <label>Logging Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>